# plataforma-clima-api

./: .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild-prod.yaml  cloudbuild-staging.yaml  pyproject.toml
k8s/prod/: resources.yaml
k8s/staging/: resources.yaml
src/app/: config.py  enums.py  main.py  products_info.py  pydantic_models.py  utils.py
src/app/routers/: radar.py  satellite.py
